Criadas as views que lista usuários e cria usuários

--- a/pizzaria/views/index.ejs
+++ b/pizzaria/views/index.ejs
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    
+    <link rel="stylesheet" href="css/index.css">
     <form action="/busca">
 		<input type="text" name="busca" placeholder="Qual pizza você procura?" autocomplete="off">
 		<button type="submit">Buscar</button>
