--- a/pizzaria/views/usuarios/create.ejs
+++ b/pizzaria/views/usuarios/create.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
     <link rel="stylesheet" href="/css/create-usuarios.css">
-    <form id="form-usuario">
+    <form id="form-usuario" action="/adm/usuarios" method="POST">
         <label>
             Nome:
             <input type="text" name="nome" id="nome" placeholder="Digite o nome do usuário">
